--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "drupal/webform": "^6.1",
         "drupal/xmlsitemap": "^1.2",
         "drush/drush": "^11.0",
+        "eaudeweb/heavy-lifter": "*",
         "tubalmartin/cssmin": "^4.1"
     },
     "require-dev": {
