--- a/.github/workflows/templates/deploy-dev-test-staging.yml
+++ b/.github/workflows/templates/deploy-dev-test-staging.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - 'develop'
 
-name: 'Deploy dev instance'
+name: 'Deploy DEV/TEST/STAGING instance'
 jobs:
   deploy:
     name: 'deployment'
@@ -26,30 +26,30 @@ jobs:
       - name: 'Deploy release on the server'
         uses: eaudeweb/drupal-deploy-action@v2.1.2
         with:
-          ssh_user:             ${{ secrets.DEV_SSH_USER }}
-          ssh_host:             ${{ secrets.DEV_SSH_HOST }}
-          ssh_key:              ${{ secrets.DEV_SSH_KEY }}
+          ssh_user:             ${{ secrets.TEST_SSH_USER }}
+          ssh_host:             ${{ secrets.TEST_SSH_HOST }}
+          ssh_key:              ${{ secrets.TEST_SSH_KEY }}
           release_id:           ${{ steps.artifact.outputs.base }}
           release_filename:     ${{ steps.artifact.outputs.filename }}
-          project_dir:          /var/www/html/dev.example.org
-          artifacts_dir:        /var/www/artifacts/dev.example.org
-          settings_file:        /var/www/config/dev.example.org/settings.local.php
-          public_files_dir:     /var/www/config/dev.example.org/files
-          # env_file:           /var/www/config/dev.example.org/.env
-          # robo_file:          /var/www/config/dev.example.org/robo.yml
-          # database_dump_dir:  /var/www/config/dev.example.org/sync
+          project_dir:          /var/www/html/test.example.org
+          artifacts_dir:        /var/www/artifacts/test.example.org
+          settings_file:        /var/www/config/test.example.org/settings.local.php
+          public_files_dir:     /var/www/config/test.example.org/files
+          # env_file:           /var/www/config/test.example.org/.env
+          # robo_file:          /var/www/config/test.example.org/robo.yml
+          # database_dump_dir:  /var/www/config/test.example.org/sync
           artifacts_lifespan: 30
 
       - name: 'Update the Drupal instance'
         id: release
         uses: eaudeweb/drupal-update-action@v1
         with:
-          path: /var/www/html/dev.example.org
+          path: /var/www/html/test.example.org
 
       - name: 'Discord notification on failed deploy'
         if: failure()
         run: >
           curl -X POST -F
-          "content=ERROR: ${{ github.repository }} failed to deploy release **${{ steps.artifact.outputs.base }}** on dev.
-          ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          "content=:octagonal_sign: ${{ github.repository }} release **${{ github.ref_name }}** failed to deploy on https://test.example.org/.
+          [view action run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
           ${{ secrets.DISCORD_WEBHOOK }}
