--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "drupal/optional_end_date": "^1.2",
         "drupal/pathauto": "^1.9",
         "drupal/redirect": "^1.7",
+        "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.23",
         "drupal/simple_search_form": "^1.4",
         "drupal/smart_trim": "^1.3",
