--- a/composer.json
+++ b/composer.json
@@ -86,8 +86,9 @@
                 "web-root": "web/"
             },
             "file-mapping": {
+                "[web-root]/sites/development.services.yml": false,
                 "[web-root]/sites/example.settings.local.php": {
-                    "append": "patches/append-example.settings.local.php.txt"
+                    "append": "scripts/composer/example.settings.local.php.extra"
                 }
             }
         },
