--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "drupal/editor_advanced_link": "^2.0",
         "drupal/edw_healthcheck": "1.10.0",
         "drupal/edwt": "^1.0@beta",
+        "drupal/environment_indicator": "^4.0",
         "drupal/facets": "^2.0",
         "drupal/field_group": "^3.2",
         "drupal/honeypot": "^2.0",
