--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -32,6 +32,7 @@ module:
   editor: 0
   editor_advanced_link: 0
   edw_healthcheck: 0
+  environment_indicator: 0
   field: 0
   field_group: 0
   field_ui: 0
