--- a/.github/workflows/templates/deploy-dev-test-staging.yml
+++ b/.github/workflows/templates/deploy-dev-test-staging.yml
@@ -50,6 +50,6 @@ jobs:
         if: failure()
         run: >
           curl -X POST -F
-          "content=:octagonal_sign: ${{ github.repository }} release **${{ github.ref_name }}** failed to deploy on https://test.example.org/.
+          "content=:octagonal_sign: **${{ github.repository }}** release **${{ github.ref_name }}** failed to deploy on https://test.example.org/.
           [view action run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
           ${{ secrets.DISCORD_WEBHOOK }}
