#17026 install/enable modules

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "drupal/backup_migrate": "5.0.1",
         "drupal/bootstrap_layout_builder": "^2.0",
         "drupal/captcha": "1.2.0",
+        "drupal/ckeditor_bs_grid": "^2.0",
+        "drupal/conditional_fields": "^4.0@alpha",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
         "drupal/drimage": "^2.0",
@@ -33,15 +35,18 @@
         "drupal/edwt": "^2.2",
         "drupal/environment_indicator": "^4.0",
         "drupal/facets": "^2.0",
-        "drupal/field_group": "^3.2",
+        "drupal/field_group": "^3.4",
         "drupal/honeypot": "^2.0",
         "drupal/layout_builder_browser": "^1.4",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/layout_builder_restrictions": "^2.12",
         "drupal/layout_builder_st": "^1.0@alpha",
         "drupal/link_attributes": "^1.11",
+        "drupal/media_library_edit": "^3.0",
+        "drupal/media_responsive_thumbnail": "^1.3",
         "drupal/menu_link_attributes": "^1.2",
         "drupal/metatag": "^1.19",
+        "drupal/oembed_lazyload": "^2.0",
         "drupal/optional_end_date": "^1.2",
         "drupal/pathauto": "^1.9",
         "drupal/redirect": "^1.7",
@@ -54,6 +59,7 @@
         "drupal/token": "^1.10",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.1",
+        "drupal/webp": "^1.0@beta",
         "drupal/xmlsitemap": "^1.2",
         "drush/drush": "^11.0",
         "eaudeweb/heavy-lifter": "*"
