Add cleanup action

--- a/.github/workflows/templates/deploy-dev-test-staging.yml
+++ b/.github/workflows/templates/deploy-dev-test-staging.yml
@@ -46,6 +46,15 @@ jobs:
         with:
           path: /var/www/html/test.example.org
 
+      - name: 'Cleanup old releases'
+        uses: eaudeweb/drupal-cleanup-action@1.x
+        with:
+          ssh_user:             ${{ secrets.TEST_SSH_USER }}
+          ssh_host:             ${{ secrets.TEST_SSH_HOST }}
+          ssh_key:              ${{ secrets.TEST_SSH_KEY }}
+          cleanup_dir:          /var/www/artifacts/test.example.org
+          retain:               5
+
       - name: 'Discord notification on failed deploy'
         if: failure()
         run: >
