--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,29 @@
 {
     "name": "getdkan/recommended-project",
-    "description": "Project template for Drupal 9 projects with a relocated document root",
-    "type": "project",
+    "description": "Project template for DKAN-based Drupal sites.",
     "license": "GPL-2.0-or-later",
-    "homepage": "https://www.drupal.org/project/drupal",
+    "type": "project",
+    "homepage": "https://getdkan.org/",
     "support": {
-        "docs": "https://www.drupal.org/docs/user_guide/en/index.html",
-        "chat": "https://www.drupal.org/node/314178"
+        "source": "https://github.com/getdkan",
+        "docs": "https://dkan.readthedocs.io/en/stable/introduction/get-dkan.html"
+    },
+    "require": {
+        "composer/installers": "^1.9",
+        "cweagans/composer-patches": "^1.7",
+        "drupal/core-composer-scaffold": "~10.0.0",
+        "drupal/core-recommended": "~10.0.0",
+        "drush/drush": "^11.5",
+        "getdkan/dkan": "dev-13523-php-81"
+    },
+    "require-dev": {
+        "drupal/core-dev": "~10.0.0",
+        "getdkan/mock-chain": "^1.3.0",
+        "phpspec/prophecy-phpunit": "^2",
+        "weitzman/drupal-test-traits": "^2.0.1"
+    },
+    "conflict": {
+        "drupal/drupal": "*"
     },
     "repositories": {
         "drupal": {
@@ -18,67 +35,66 @@
             "url": "https://asset-packagist.org"
         }
     },
-    "require": {
-        "composer/installers": "^1.9",
-        "cweagans/composer-patches": "^1.7",
-        "drupal/core-composer-scaffold": "~9.5.0",
-        "drupal/core-project-message": "~9.5.0",
-        "drupal/core-recommended": "~9.5.0",
-        "drush/drush": "^10.1",
-        "getdkan/dkan": "^2.0"
-    },
-    "require-dev": {
-        "drupal/core-dev": "~9.5.0",
-        "getdkan/mock-chain": "^1.3.0",
-        "phpspec/prophecy-phpunit": "^2",
-        "weitzman/drupal-test-traits": "^2.0.1"
-    },
-    "conflict": {
-        "drupal/drupal": "*"
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true,
         "allow-plugins": {
             "composer/installers": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "cweagans/composer-patches": true,
             "oomphinc/composer-installers-extender": true,
             "drupal/core-composer-scaffold": true,
-            "drupal/core-project-message": true
-        }
+            "drupal/core-project-message": true,
+            "phpstan/extension-installer": true
+        },
+        "sort-packages": true
     },
     "extra": {
-        "enable-patching": true,
-        "patches": {
-            "drupal/core": {
-                "2893933: claimItem in the database and memory queues does not use expire correctly": "https://www.drupal.org/files/issues/2023-01-10/2893933-drupal-queue-claim-9.5.x-58.patch"
-            }
-        },
         "drupal-scaffold": {
             "locations": {
                 "web-root": "docroot/"
             }
         },
+        "enable-patching": true,
         "installer-paths": {
-            "docroot/core": ["type:drupal-core"],
+            "docroot/core": [
+                "type:drupal-core"
+            ],
             "docroot/libraries/{$name}": [
                 "type:drupal-library",
                 "type:bower-asset",
                 "type:npm-asset"
             ],
-            "docroot/modules/contrib/{$name}": ["type:drupal-module"],
-            "docroot/profiles/contrib/{$name}": ["type:drupal-profile"],
-            "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
-            "drush/Commands/contrib/{$name}": ["type:drupal-drush"],
-            "docroot/modules/custom/{$name}": ["type:drupal-custom-module"],
-            "docroot/profiles/custom/{$name}": ["type:drupal-custom-profile"],
-            "docroot/themes/custom/{$name}": ["type:drupal-custom-theme"]
+            "docroot/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "docroot/profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "docroot/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "drush/Commands/contrib/{$name}": [
+                "type:drupal-drush"
+            ],
+            "docroot/modules/custom/{$name}": [
+                "type:drupal-custom-module"
+            ],
+            "docroot/profiles/custom/{$name}": [
+                "type:drupal-custom-profile"
+            ],
+            "docroot/themes/custom/{$name}": [
+                "type:drupal-custom-theme"
+            ]
         },
         "installer-types": [
             "bower-asset",
             "npm-asset"
-        ]
+        ],
+        "patches": {
+            "drupal/core": {
+                "2893933: claimItem in the database and memory queues does not use expire correctly": "https://www.drupal.org/files/issues/2023-01-10/2893933-drupal-queue-claim-9.5.x-58.patch"
+            }
+        }
     }
 }
