--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/config_update": "^2@dev",
+        "drupal/config_update": "^2.0.0-alpha2",
         "drupal/core-composer-scaffold": "~10.0.0",
         "drupal/core-recommended": "~10.0.0",
         "drush/drush": "^11.5",
