--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "~10.0.0",
-        "drupal/core-recommended": "~10.0.0",
+        "drupal/core": "~10.0.0",
         "drush/drush": "^11.5",
         "getdkan/dkan": "2.x-dev"
     },
