--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.1",
-        "drupal/advagg": "^4.1",
+        "drupal/advagg": "^6.0@alpha",
         "drupal/ajax_loader": "^2.0",
         "drupal/allowed_formats": "^1.5",
-        "drupal/backup_migrate": "5.0.1",
+        "drupal/backup_migrate": "^5.0",
         "drupal/bootstrap_layout_builder": "^2.0",
         "drupal/captcha": "1.2.0",
         "drupal/ckeditor_bs_grid": "^2.0",
@@ -53,11 +53,12 @@
         "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.23",
         "drupal/simple_search_form": "^1.4",
-        "drupal/smart_trim": "^1.3",
+        "drupal/smart_trim": "^2.0",
         "drupal/smtp": "^1.0",
         "drupal/spamspan": "^1.2",
         "drupal/token": "^1.10",
         "drupal/twig_tweak": "^3.1",
+        "drupal/upgrade_status": "^4.0",
         "drupal/webform": "^6.1",
         "drupal/webp": "^1.0@beta",
         "drupal/xmlsitemap": "^1.2",
@@ -69,7 +70,6 @@
         "drupal/core-dev": "^9.4",
         "drupal/stage_file_proxy": "^1.2",
         "drupal/twig_vardumper": "^3.0",
-        "overtrue/phplint": "^3.2",
         "phpmd/phpmd": "^2.12"
     },
     "conflict": {
@@ -84,6 +84,9 @@
             "cweagans/composer-patches": true,
             "drupal/core-composer-scaffold": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "platform": {
+            "php": "8.1"
         }
     },
     "extra": {
