--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,23 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://packages.drupal.org/8"
+            "url": "https://packages.drupal.org/8",
+            "exclude": [
+                "drupal/simple_search_form"
+            ]
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "drupal/simple_search_form",
+                "version": "dev-custom",
+                "type": "drupal-module",
+                "source": {
+                    "type": "git",
+                    "url": "https://git.drupalcode.org/issue/simple_search_form-3289653.git",
+                    "reference": "8.x-1.x"
+                }
+            }
         }
     ],
     "require": {
@@ -26,12 +42,13 @@
         "drupal/captcha": "1.2.0",
         "drupal/ckeditor_bs_grid": "^2.0",
         "drupal/conditional_fields": "^4.0@alpha",
-        "drupal/core-composer-scaffold": "^9.4",
-        "drupal/core-recommended": "^9.4",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-project-message": "^10",
+        "drupal/core-recommended": "^10",
         "drupal/drimage": "^2.0",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.0",
-        "drupal/edw_healthcheck": "1.10.0",
+        "drupal/edw_healthcheck": "^1.18",
         "drupal/edwt": "^2.2",
         "drupal/environment_indicator": "^4.0",
         "drupal/facets": "^2.0",
@@ -52,7 +69,7 @@
         "drupal/redirect": "^1.7",
         "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.23",
-        "drupal/simple_search_form": "^1.4",
+        "drupal/simple_search_form": "dev-custom",
         "drupal/smart_trim": "^2.0",
         "drupal/smtp": "^1.0",
         "drupal/spamspan": "^1.2",
@@ -67,8 +84,8 @@
     },
     "require-dev": {
         "drupal/coder": "^8.3",
-        "drupal/core-dev": "^9.4",
-        "drupal/stage_file_proxy": "^1.2",
+        "drupal/core-dev": "^10",
+        "drupal/stage_file_proxy": "^2.0",
         "drupal/twig_vardumper": "^3.0",
         "phpmd/phpmd": "^2.12"
     },
