--- a/config/default/user.role.edw_healthcheck_role.yml
+++ b/config/default/user.role.edw_healthcheck_role.yml
@@ -1,12 +1,9 @@
 uuid: a7790e70-8332-4325-a412-6641a6cc23ae
 langcode: en
 status: true
-dependencies:
-  module:
-    - edw_healthcheck
+dependencies: {  }
 id: edw_healthcheck_role
 label: 'EDW HealthCheck Access Role'
 weight: 2
 is_admin: null
-permissions:
-  - 'edw healthcheck access'
+permissions: {  }
