Update core to 10.0.9

--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,9 @@
         "drupal/captcha": "^2.0@beta",
         "drupal/ckeditor_bs_grid": "^2.0",
         "drupal/conditional_fields": "^4.0@alpha",
-        "drupal/core-composer-scaffold": "^10",
-        "drupal/core-project-message": "^10",
-        "drupal/core-recommended": "^10",
+        "drupal/core-composer-scaffold": "^10.0.9",
+        "drupal/core-project-message": "^10.0.9",
+        "drupal/core-recommended": "^10.0.9",
         "drupal/drimage": "^2.0",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.0",
@@ -80,7 +80,7 @@
         "drupal/webp": "^1.0@beta",
         "drupal/xmlsitemap": "^1.2",
         "drush/drush": "^11.0",
-        "eaudeweb/heavy-lifter": "*"
+        "eaudeweb/heavy-lifter": "^2"
     },
     "require-dev": {
         "drupal/coder": "^8.3",
