--- a/config/default/editor.editor.full_html.yml
+++ b/config/default/editor.editor.full_html.yml
@@ -36,6 +36,7 @@ settings:
       - '|'
       - removeFormat
       - '|'
+      - Accordion
   plugins:
     ckeditor5_alignment:
       enabled_alignments:
