--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/backup_migrate": "^5.0",
         "drupal/bootstrap_layout_builder": "^2.0",
         "drupal/captcha": "^2.0@beta",
+        "drupal/ckeditor_accordion": "^2.0",
         "drupal/ckeditor_bs_grid": "^2.0",
         "drupal/conditional_fields": "^4.0@alpha",
         "drupal/core-composer-scaffold": "^10.0.9",
