refs #17731 added overtrue/phplink version 9

--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,7 @@
         "drupal/core-dev": "^10",
         "drupal/stage_file_proxy": "^2.0",
         "drupal/twig_vardumper": "^3.0",
+        "overtrue/phplint": "^9",
         "phpmd/phpmd": "^2.12"
     },
     "conflict": {
