--- a/composer.json
+++ b/composer.json
@@ -116,9 +116,7 @@
             },
             "file-mapping": {
                 "[web-root]/sites/development.services.yml": false,
-                "[web-root]/sites/example.settings.local.php": {
-                    "append": "scripts/composer/example.settings.local.php.extra"
-                }
+                "[web-root]/sites/example.settings.local.php": false
             }
         },
         "installer-paths": {
