Changes to frontend theme

--- a/web/themes/custom/frontend/frontend.libraries.yml
+++ b/web/themes/custom/frontend/frontend.libraries.yml
@@ -6,6 +6,7 @@ global-styling:
       css/vars.css: {}
       css/general.css: {}
       css/dark-mode.css: {}
+      css/content/news/news-teaser.css: {}
   js:
     js/script.js: {}
 
