--- a/web/themes/custom/frontend/package.json
+++ b/web/themes/custom/frontend/package.json
@@ -18,6 +18,11 @@
     "cssnano": "^5.1.13",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
+    "imagemin": "^7.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "9.0.0",
     "minimist": "^1.2.6",
     "mkdirp": "^1.0.4",
     "node-fs-extra": "^0.8.2",
