--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -27,6 +27,7 @@ module:
   datetime_range: 0
   dblog: 0
   drimage: 0
+  dropdown_language: 0
   dynamic_page_cache: 0
   easy_breadcrumb: 0
   editor: 0
