--- a/config/default/block.block.edwt_main_menu.yml
+++ b/config/default/block.block.edwt_main_menu.yml
@@ -13,7 +13,7 @@ _core:
 id: edwt_main_menu
 theme: edwt
 region: nav_main
-weight: -6
+weight: -4
 provider: null
 plugin: 'system_menu_block:main'
 settings:
@@ -22,6 +22,6 @@ settings:
   label_display: '0'
   provider: system
   level: 1
-  depth: 1
-  expand_all_items: false
+  depth: 2
+  expand_all_items: true
 visibility: {  }
