--- a/config/default/frontend.settings.yml
+++ b/config/default/frontend.settings.yml
@@ -20,7 +20,7 @@ sr__container_nav_main: none
 sr__container_position_nav_main: before
 sr__extra_class_nav_main: ''
 sr__clean_header: 0
-sr__class_header: 'gap-md-3 align-items-md-center'
+sr__class_header: 'gap-3 align-items-md-center flex-column flex-md-row'
 sr__container_header: none
 sr__container_position_header: before
 sr__extra_class_header: ''
