--- a/config/default/frontend.settings.yml
+++ b/config/default/frontend.settings.yml
@@ -15,12 +15,12 @@ sr__container_branding: none
 sr__container_position_branding: before
 sr__extra_class_branding: ''
 sr__clean_nav_main: 0
-sr__class_nav_main: ''
+sr__class_nav_main: 'fs-1.25 fw-bold mt-1'
 sr__container_nav_main: none
 sr__container_position_nav_main: before
 sr__extra_class_nav_main: ''
 sr__clean_header: 0
-sr__class_header: 'gap-3 align-items-md-center flex-column flex-md-row'
+sr__class_header: 'align-items-md-center flex-md-row '
 sr__container_header: none
 sr__container_position_header: before
 sr__extra_class_header: ''
