created 3 new footer regions, updated twigs

--- a/web/themes/custom/frontend/frontend.info.yml
+++ b/web/themes/custom/frontend/frontend.info.yml
@@ -23,4 +23,6 @@ regions:
   sidebar_second: 'Sidebar second'
   footer: Footer
   footer_second: Footer Second
+  footer_third: Footer Third
+  footer_forth: Footer Forth
   disable_region: 'Disabled Region'
