--- a/config/default/core.entity_view_display.node.news.teaser.yml
+++ b/config/default/core.entity_view_display.node.news.teaser.yml
@@ -8,9 +8,11 @@ dependencies:
     - field.field.node.news.field_banner_image
     - field.field.node.news.field_image
     - field.field.node.news.field_news_type
+    - image.style.teaser
     - node.type.news
   module:
-    - text
+    - media
+    - smart_trim
     - user
 id: node.news.teaser
 targetEntityType: node
@@ -18,20 +20,51 @@ bundle: news
 mode: teaser
 content:
   body:
-    type: text_summary_or_trimmed
+    type: smart_trim
     label: hidden
     settings:
-      trim_length: 600
+      trim_length: 80
+      trim_type: words
+      trim_suffix: ''
+      wrap_output: false
+      wrap_class: trimmed
+      more_link: false
+      more_class: more-link
+      more_text: More
+      more_aria_label: 'Read more about [node:title]'
+      summary_handler: trim
+      trim_options:
+        text: true
+        trim_zero: false
+        replace_tokens: false
     third_party_settings: {  }
-    weight: 101
+    weight: 1
+    region: content
+  field_image:
+    type: media_thumbnail
+    label: hidden
+    settings:
+      image_link: content
+      image_style: teaser
+      image_loading:
+        attribute: lazy
+    third_party_settings: {  }
+    weight: 2
+    region: content
+  field_news_type:
+    type: entity_reference_label
+    label: hidden
+    settings:
+      link: false
+    third_party_settings: {  }
+    weight: 3
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   field_banner_image: true
-  field_image: true
-  field_news_type: true
   langcode: true
+  search_api_excerpt: true
