--- a/config/default/core.entity_view_display.node.page.default.yml
+++ b/config/default/core.entity_view_display.node.page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.field_image
     - field.field.node.page.field_metatags
     - field.field.node.page.layout_builder__layout
     - field.field.node.page.layout_builder__translation
@@ -64,6 +65,22 @@ third_party_settings:
                 settings: {  }
                 third_party_settings: {  }
             weight: 2
+            additional: {  }
+          a66757fa-6e75-4a6d-ae3c-9520fa1ee994:
+            uuid: a66757fa-6e75-4a6d-ae3c-9520fa1ee994
+            region: content
+            configuration:
+              id: 'field_block:node:page:field_image'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: entity_reference_label
+                label: above
+                settings:
+                  link: true
+                third_party_settings: {  }
+            weight: 3
             additional: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
@@ -135,6 +152,14 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
+  field_image:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 103
+    region: content
   field_metatags:
     type: metatag_empty_formatter
     label: above
@@ -151,3 +176,4 @@ hidden:
   langcode: true
   layout_builder__layout: true
   layout_builder__translation: true
+  search_api_excerpt: true
