--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
         "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.23",
         "drupal/simple_search_form": "dev-custom",
+        "drupal/slick_views": "^2.6",
         "drupal/smart_trim": "^2.0",
         "drupal/smtp": "^1.0",
         "drupal/spamspan": "^3.0@beta",
